Added js, menu icon

--- a/main.css
+++ b/main.css
@@ -40,10 +40,7 @@ header {
 
 .headroom {
     width: 95%;
-    /* position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 1; */
+    overflow: hidden;
 }
 
 .content-wrapper {
@@ -57,18 +54,38 @@ header {
     cursor:pointer;
 }
 
+#top-nav {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nav-links {
+    position: absolute;
     list-style: none;
     margin-left: 6rem;
+    display: flex;
+    flex-flow: column;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.show {
+    transform: translateY(-0.2rem);
+    visibility: visible;
+    opacity: 1;
 }
 
 .nav-links li {
-    display:inline-block;
-    padding: 0 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* padding: 0 20px; */
 }
 
 .nav-links li a {
-    transition: all 0.3s ease 0s
+    transition: all 0.3s ease 0s;
 }
 
 .nav-links li a:hover {
@@ -91,6 +108,11 @@ button:hover{
     background-color: var(--dark-green);
     opacity:75%;
     color:#003823;
+}
+
+.nav-toggle {
+    display: flex;
+    position: relative;
 }
 
 /********************* HERO SECTION *********************/
