--- a/main.css
+++ b/main.css
@@ -22,73 +22,72 @@ img {
     width: 100%;
 }
 
+ul {
+    list-style: none;
+}
+
 li, a, button {
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     font-size: 24px;
-    text-decoration:none;
-    color:black;
+    text-decoration: none;
+    color: black;
 }
 
 header {
     background-color: var(--pink);
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     padding: 30px 5%;
 }
 
-.headroom {
-    width: 95%;
-    overflow: hidden;
+#logo {
+    cursor: pointer;
 }
 
-.content-wrapper {
+/*************** NAV MENU **************/
+
+.nav-menu {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
 }
 
-#logo {
-    cursor:pointer;
+.nav-menu li {
+    padding: 15px 5px;
 }
 
-#top-nav {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.nav-menu li a {
+    display: block;
 }
 
-.nav-links {
-    position: absolute;
-    list-style: none;
-    margin-left: 6rem;
-    display: flex;
-    flex-flow: column;
-    visibility: hidden;
-    opacity: 0;
+.logo img {
+    width: 75%;
 }
 
-.show {
-    transform: translateY(-0.2rem);
-    visibility: visible;
-    opacity: 1;
+.nav-item {
+    order: 2;
+    width: 100%;
+    text-align: center;
+    padding: 0 20px;
+    display: none;
 }
 
-.nav-links li {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    /* padding: 0 20px; */
+.nav-item.active {
+    display: block;
 }
 
-.nav-links li a {
-    transition: all 0.3s ease 0s;
+.nav-link {
+    transition: 0.7s ease;
 }
 
-.nav-links li a:hover {
+.nav-link:hover {
+    color:var(--dark-green);
+}
+
+.nav-link:hover {
     color:var(--dark-green);
 }
 
@@ -106,13 +105,41 @@ button {
 
 button:hover{
     background-color: var(--dark-green);
-    opacity:75%;
-    color:#003823;
+    opacity: 75%;
+    color: #003823;
 }
 
 .nav-toggle {
-    display: flex;
+    order: 1;
+    cursor: pointer;
+}
+
+.bar {
+    background-color: black;
+    display: inline-block;
     position: relative;
+    width: 18px;
+    height: 2px;
+    /* transition: all 0.3s ease-in-out;
+    color: black */
+}
+
+.bar::before,
+.bar::after {
+    background-color: black;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 18px;
+    height: 2px;
+}
+
+.bar::before {
+    top: 5px;
+}
+
+.bar::after {
+    top: -5px;
 }
 
 /********************* HERO SECTION *********************/
@@ -544,6 +571,30 @@ textarea {
  -------------------------------------------------*/
 
 @media(min-width:768px){
+    /* MENU */
+
+    .nav-menu {
+        flex-wrap: nowrap;
+    }
+
+    .nav-menu .logo {
+        width: 50%;
+    }
+
+    .logo img {
+        width: 15%;
+    }
+    
+    .nav-item {
+        display: flex;
+        justify-content: center;
+        width: 20%;
+    }
+
+    .nav-toggle {
+        display: none;
+    }
+
     /* BG IMG */
     .hero {
         background-position: 700px 0px;
