--- a/main.css
+++ b/main.css
@@ -39,7 +39,8 @@ header {
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    padding: 30px 5%;
+    padding: 25px 5%;
+    min-height: 150px;
 }
 
 #logo {
@@ -48,31 +49,22 @@ header {
 
 /*************** NAV MENU **************/
 
-.nav-menu {
+.nav-bar {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 0 10px;
 }
 
-.nav-menu li {
-    padding: 15px 5px;
-}
-
-.nav-menu li a {
-    display: block;
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
 }
 
 .logo img {
     width: 75%;
-}
-
-.nav-item {
-    order: 2;
-    width: 100%;
-    text-align: center;
-    padding: 0 20px;
-    display: none;
 }
 
 .nav-item.active {
@@ -81,10 +73,6 @@ header {
 
 .nav-link {
     transition: 0.7s ease;
-}
-
-.nav-link:hover {
-    color:var(--dark-green);
 }
 
 .nav-link:hover {
@@ -110,36 +98,18 @@ button:hover{
 }
 
 .nav-toggle {
-    order: 1;
+    display: none;
     cursor: pointer;
 }
 
 .bar {
-    background-color: black;
-    display: inline-block;
-    position: relative;
-    width: 18px;
-    height: 2px;
-    /* transition: all 0.3s ease-in-out;
-    color: black */
-}
-
-.bar::before,
-.bar::after {
-    background-color: black;
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 18px;
-    height: 2px;
-}
-
-.bar::before {
-    top: 5px;
-}
-
-.bar::after {
-    top: -5px;
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: black
 }
 
 /********************* HERO SECTION *********************/
@@ -565,6 +535,51 @@ textarea {
     padding-left:24px;
 }
 
+/*------------------------------------------------- 
+        ******* MOBILE MENU STYLES  *******
+ -------------------------------------------------*/
+@media(max-width:768px) {
+
+    .nav-toggle {
+        display: block;
+        background-color: var(--gold);
+        border: none;
+        border-radius: 10px;
+        padding: 10px;
+    }
+
+    .nav-toggle.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .nav-toggle.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .nav-toggle.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu {
+        position: absolute;
+        left: -100%;
+        top: 150px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--pink);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .nav-item {
+        margin: 16px 0;
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+}
 
 /*------------------------------------------------- 
         ******* TABLET MEDIA QUERY STYLES  *******
@@ -572,9 +587,10 @@ textarea {
 
 @media(min-width:768px){
     /* MENU */
-
     .nav-menu {
-        flex-wrap: nowrap;
+        width: 50%;
+        padding: 20px 0;
+        gap: 0;
     }
 
     .nav-menu .logo {
@@ -588,7 +604,6 @@ textarea {
     .nav-item {
         display: flex;
         justify-content: center;
-        width: 20%;
     }
 
     .nav-toggle {
